# lib-sql-migrations

./: Cargo.toml  create-applied-migrations.sql
migrate/: Cargo.toml
migrate/src/: applied.rs  apply.rs  apply_down.rs  apply_up.rs  available.rs  create.rs  database.rs  main.rs  required.rs  required_down.rs  required_up.rs
migrate/src/args/: database.rs  mod.rs
migrate/src/args/command/: applied.rs  apply.rs  apply_down.rs  apply_up.rs  available.rs  create.rs  mod.rs  required.rs  required_down.rs  required_up.rs
src/: applied_migrations.rs  apply.rs  error.rs  lib.rs  migrations.rs  mod.rs  required_migrations.rs
src/apply/: create-applied-migrations.sql  down.rs  mod.rs  table.rs  up.rs
src/get/: applied.rs  available.rs  mod.rs
src/migration/: down.rs  mod.rs  up.rs  validate_name.rs
